--- a/estilos/style.css
+++ b/estilos/style.css
@@ -89,3 +89,12 @@ input[type=text], input[type=password], input[type=email], select {
     border: 2px solid red;
     margin-left: 5%;
   }
+  .boton_personalizado4{
+    text-decoration: none;
+    padding: 5px;
+    font-weight: 600;
+    font-size: 20px;
+    color: #ffffff;
+    background-color:red;
+    border-radius: 6px;
+  }
